table response fixed - context custom scrollbar - #table not showing date type untill search (showing string types correctly)

--- a/src/pages/Styles/DashboardMain.module.css
+++ b/src/pages/Styles/DashboardMain.module.css
@@ -82,6 +82,25 @@
   line-height: normal;
   letter-spacing: normal;
 }
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 30px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
+}
 @media screen and (max-width: 1200px) {
   .dashboard {
     height: auto;
